--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,9 @@
 Koolshare Asuswrt-Merlin EasyExplorer Changelog
 ===========================================
+0.0.10 ( 2019-04-17 )
+  - Update    更新主程序20190417.051642
+0.0.9 ( 2018-12-09 )
+  - Update    更新主程序20181209.033820
 0.0.8 ( 2018-09-21 19:50 )
   - Update    更新主程序，提升传输效率
 0.0.7 ( 2018-09-13 19:30 )
