--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 Koolshare Asuswrt-Merlin EasyExplorer Changelog
 ===========================================
+1.0 ( 2019-04-28 )
+  - Update    优化插件，更新图标
 0.0.10 ( 2019-04-17 )
   - Update    更新主程序20190417.051642
 0.0.9 ( 2018-12-09 )
