--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 Koolshare Asuswrt-Merlin EasyExplorer Changelog
 ===========================================
+1.2 ( 2019-05-09 )
+  - Update    更新主程序20190509.153050
 1.0 - 1.1 ( 2019-04-28 )
   - Update    优化插件，更新图标
   - Update    更新中文名
