--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,9 @@
 Koolshare Asuswrt-Merlin EasyExplorer Changelog
 ===========================================
+1.5 ( 2019-07-03 )
+  - Update    更新主程序20190702.163857
+1.4 ( 2019-07-02 )
+  - Update    更新主程序20190701.104022
 1.3 ( 2019-05-27 )
   - Update    更新主程序20190518.085023
 1.2 ( 2019-05-09 )
