更新主程序20200206.024836

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 Koolshare Asuswrt-Merlin EasyExplorer Changelog
 ===========================================
+1.6 ( 2020-02-06 )
+  - Update    更新主程序20200206.024836
 1.5 ( 2019-07-03 )
   - Update    更新主程序20190702.163857
 1.4 ( 2019-07-02 )
